# fractal

./: .gitignore  Cargo.toml  README.md
src/: ast.rs  builtin.rs  common.rs  error.rs  fractal.pest  lib.rs  main.rs  parse.rs  pattern.rs  vm.rs
tests/: run.rs
