[package]
name = "fractal"
version = "0.1.0"
authors = ["Lorxu <sam@dirkback.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"
pest_derive = "2.1"
codespan = "0.4"
codespan-reporting = "0.4"
string-interner = "0.7"
termcolor = "*"
